<resources>
    <string name="app_name">FootBall Fever</string>
    <string name="goal">Goal</string>
    <string name="assist">Passes</string>
    <string name="choose_your_favorite_leagues">Choose your favorite leagues</string>
    <string name="choose_country">Choose country</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="home_team_logo">home team logo</string>
    <string name="away_team_logo">away team logo</string>
    <string name="corner_kick">Corner Kick</string>
    <string name="offside">Offside</string>
    <string name="red_card">Red Card</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="fouls">Fouls</string>
    <string name="pass_accuracy">Pass Accuracy</string>
    <string name="pass">Pass</string>
    <string name="ball_possession">Ball Possession</string>
    <string name="shots_on_target">shots on target</string>
    <string name="total_shots">Total Shots</string>
    <string name="logo">logo</string>
    <string name="dash">-</string>
    <string name="summary_time">%s\'</string>
    <string name="live_score">Live Score</string>
    <string name="home">Home</string>
    <string name="column">:</string>
    <string name="away">Away</string>
    <string name="match_schedule">Match Schedule</string>
    <string name="notification">notification</string>
    <string name="search_text">Search</string>
    <string name="league_text">League</string>
    <string name="team_text">Team</string>
    <string name="coach_text">Coach</string>
    <string name="chelsea">chelsea</string>
    <string name="_06_30">06:30</string>
    <string name="hint">Hint</string>
    <string name="hint_to_select_favorite_teams">you can choose with a long press to select teams</string>
    <string name="ok">ok</string>
    <string name="alert">Alert</string>
    <string name="alert_selection">you must select at least one favorite team</string>
    <string name="there_is_no_matches_in_this_date">there is no matches in this date</string>


    <string name="pos">Pos</string>
    <string name="team">Team</string>
    <string name="p">P</string>
    <string name="w">W</string>
    <string name="pts">Pts</string>
    <string name="rank_value">1</string>
    <string name="pts_value">31</string>
    <string name="win_value">10</string>
    <string name="played_value">12</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="there_is_no_more_matches_in_this_data">there is no more matches in this data</string>
    <string name="refresh_data">Refresh Data</string>
    <string name="favourites">Favourites</string>
    <string name="unfollow">Unfollow</string>

    <string name="injuries">injuries</string>
    <string name="injury_date">19/11/2022</string>
    <string name="injury_player_name">Neymar</string>
    <string name="injury">sprain in ankle</string>
    <string name="favorite">Favorite</string>
    <string name="man_utd">man_utd</string>
    <string name="_1_1">1-1</string>
    <string name="follow">follow</string>
    <string name="more">More</string>
    <string name="coach">coach</string>
    <string name="transfers">transfers</string>
    <string name="clear_all">Clear All</string>

    <string name="feature_three">Offline Access and Saving Content: The ability to save articles, videos, or match highlights for offline access allows users to enjoy content even without an internet connection. This feature ensures that fans can access their favorite content anytime, anywhere.</string>
    <string name="feature_two">Customization and Personalization: Football applications often allow users to personalize their experience by selecting their favorite teams, players, or leagues. This feature ensures that users receive tailored news, alerts, and updates relevant to their preferences.</string>
    <string name="feature_one">Real-time Updates: The ability to deliver instant and accurate information, including live scores, match events, and player statistics, ensures that users stay up-to-date with the latest developments in their favorite leagues and teams.</string>
    <string name="description_of_app">Football applications have revolutionized the way we engage with the beautiful game, bringing convenience, interactivity, and a wealth of information to the fingertips of fans worldwide. These applications, often available on smartphones or other devices, have become an essential part of a football enthusiast\'s digital toolkit.</string>
    <string name="about">About</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>


</resources>