<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.pancake.footballfever.domain.models.Injuries" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginHorizontal="@dimen/large_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        app:cardCornerRadius="@dimen/radius_semi_large">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_main_card">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/injuries_flag_image_view"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:roundPercent="1"
                app:setImageUrl="@{item.logoTeam.toString()}"
                tools:src="@drawable/flag_of_brazil" />

            <TextView
                android:id="@+id/injuries_player_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:text="@{item.name.toString()}"
                android:textColor="@color/text_title"
                app:layout_constraintStart_toStartOf="@+id/injuries_flag_image_view"
                app:layout_constraintTop_toBottomOf="@id/injuries_flag_image_view"
                tools:text="@string/injury_player_name" />

            <TextView
                android:id="@+id/injuries_injury_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@{item.reason.toString()}"
                android:textColor="@color/text_item_card"
                app:layout_constraintStart_toStartOf="@+id/injuries_player_name"
                app:layout_constraintTop_toBottomOf="@+id/injuries_player_name"
                tools:text="@string/injury" />

            <TextView
                android:id="@+id/injury_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@{item.date.toString()}"
                app:layout_constraintStart_toStartOf="@+id/injuries_injury_type"
                app:layout_constraintTop_toBottomOf="@id/injuries_injury_type"
                tools:text="@string/injury_date" />

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="@dimen/large_margin"
                android:background="@color/white"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:roundPercent="1"
                app:setImageUrl="@{item.photo.toString()}"
                tools:src="@drawable/neymar_pic" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>