<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.pancake.footballfever.ui.selectFavoriteTeams.SelectFavoriteTeamsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".ui.select_favourite.teams.SelectFavouriteTeamsFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:background="@color/background_color"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/app_bar_header"
                style="@style/screen_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:text="@string/choose_your_favorite_leagues" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favorite_teams_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/medium_margin"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/guideLineBottom"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            app:setRecyclerItems="@{viewModel.teams.success}"
            app:spanCount="3"
            tools:listitem="@layout/select_favorite_teams_item" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/guideLineBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:showIfLoading="@{viewModel.teams.loading}" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/error_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/guideLineBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:showIfError="@{viewModel.teams.error}"
            app:srcCompat="@drawable/baseline_error_48" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:background="@drawable/refresh_button_shape"
            android:paddingHorizontal="@dimen/large_padding"
            android:text="@string/refresh_data"
            android:textAllCaps="false"
            android:textColor="@color/white87"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/error_icon"
            app:showIfError="@{viewModel.teams.error}" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineBottom"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_percent=".92" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/background_main_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent=".08"
            app:layout_constraintTop_toBottomOf="@id/guideLineBottom">


            <TextView
                style="@style/back_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:text="@string/back"
                app:drawableLeftCompat="@drawable/ic_back_ios_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                style="@style/back_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/large_margin"
                android:onClick="@{()-> viewModel.onNextClick()}"
                android:text="@string/next"
                app:drawableEndCompat="@drawable/ic_forward_ios_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>